--- a/miniprogram/components/Tabs/Tabs.wxml
+++ b/miniprogram/components/Tabs/Tabs.wxml
@@ -8,5 +8,7 @@
         class="title_item  {{item.isActive?'active':''}}">{{item.name}}
         </view>
     </view>
-    <view class="tabs_content">内容</view>
+    <view class="tabs_content">
+        <slot></slot>
+    </view>
 </view>
